<resources>
    <string name="app_name">Traffic Sign Detection</string>
    <string name="capture">Capture</string>
    <string name="traffic_sign">Traffic Sign</string>
    <string name="possible_results">Possible Results</string>
    <string name="go_back">Go back</string>
    <string name="image">Image</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_image">Sign Image</string>
    <string name="select_image">Select Image</string>
    <string name="gallery">Gallery</string>
    <string name="crop_image">Crop Image</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
</resources>